# copier

./: LICENSE  README.md  copier.yml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: misspell.yml  precommit_update.yml  test.yml
project_name/: .editorconfig  .markdownlint.yaml  .pre-commit-config.yaml  .project_init.sh  Makefile  README.md.jinja  pyproject.toml.jinja  setup.cfg
project_name/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
project_name/.github/: CODEOWNERS  dependabot.yml  dependabot.yml.jinja
project_name/.github/workflows/: misspell.yml  precommit_update.yml  release.yml.jinja  test.yml
project_name/docs/: conf.py.jinja  index.rst
project_name/docs/_templates/: badges.html.jinja  github.html.jinja  moreinfo.html.jinja
project_name/tests/test_example/: test_some_function.py.jinja
